--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,15 @@ include_directories(C:/Programming/Java/jdk11/include)
 include_directories(C:/Programming/Java/jdk11/include/win32)
 include_directories(/usr/lib/jvm/java-11-openjdk-amd64/include)
 include_directories(/usr/lib/jvm/java-11-openjdk-amd64/include/linux)
+include_directories(/usr/lib/jvm/java-11-openjdk/include)
+include_directories(/usr/lib/jvm/java-11-openjdk/include/linux)
 
 link_directories(C:/Programming/Java/jdk11/include)
 link_directories(C:/Programming/Java/jdk11/include/win32)
 link_directories(/usr/lib/jvm/java-11-openjdk-amd64/include)
 link_directories(/usr/lib/jvm/java-11-openjdk-amd64/include/linux)
+link_directories(/usr/lib/jvm/java-11-openjdk/include)
+link_directories(/usr/lib/jvm/java-11-openjdk/include/linux)
 
 add_library(example SHARED move_producer.cpp ru_gregpack_thewar_network_JNIMoveProducer.h structures.h your_ai.cpp your_ai.h)
 add_executable(example_exe move_producer.cpp ru_gregpack_thewar_network_JNIMoveProducer.h structures.h your_ai.cpp your_ai.h)
