thewar-client: add standard functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ link_directories(/usr/lib/jvm/java-11-openjdk-amd64/include/linux)
 link_directories(/usr/lib/jvm/java-11-openjdk/include)
 link_directories(/usr/lib/jvm/java-11-openjdk/include/linux)
 
-add_library(example SHARED move_producer.cpp ru_gregpack_thewar_network_JNIMoveProducer.h structures.h your_ai.cpp your_ai.h)
-add_executable(example_exe move_producer.cpp ru_gregpack_thewar_network_JNIMoveProducer.h structures.h your_ai.cpp your_ai.h)
+add_library(example SHARED move_producer.cpp ru_gregpack_thewar_network_JNIMoveProducer.h structures.h your_ai.cpp your_ai.h help_functions.cpp help_functions.h)
+add_executable(example_exe move_producer.cpp ru_gregpack_thewar_network_JNIMoveProducer.h structures.h your_ai.cpp your_ai.h help_functions.cpp help_functions.h)
 target_link_options(example PRIVATE -static-libgcc -static-libstdc++)
 target_link_options(example_exe PRIVATE -static-libgcc -static-libstdc++)
 target_link_libraries(example PRIVATE nlohmann_json::nlohmann_json)
